# jeepy-ai

./: .env.example  .gitignore  ARCHITECTURE.txt  COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  PROJECT_WORKFLOWS.md  README.md  README_SCREAM.md  SCREAM_ARCHITECTURE.md  SCREAM_SUMMARY.txt  SCREAM_VISUAL.md  config.py  gemini_engine.py  main.py  pyproject.toml  setup.py  setup.sh  stt_engine.py  test_gemini.py  test_stt.py  verify_stt.py
.github/: copilot-instructions.md
_legacy/: audio_capture.py  command_processor.py  kws_inference.py  main.py  state.py  utils.py
captured_commands/: README.md
jeepy_ai/: __init__.py  main.py
jeepy_ai/application/: __init__.py
jeepy_ai/application/usecases/: get_system_status_usecase.py  start_monitoring_usecase.py  stop_monitoring_usecase.py
jeepy_ai/controllers/: __init__.py  monitor_controller.py
jeepy_ai/entities/: __init__.py  audio_chunk.py  command.py  error_recovery.py  system_state.py
jeepy_ai/presentation/: __init__.py
jeepy_ai/presentation/cli/: __init__.py  cli_presentation.py
jeepy_ai/repositories/: __init__.py  audio_repository.py  command_repository.py  config_repository.py
jeepy_ai/services/: __init__.py  audio_capture_service.py  command_processor_service.py  kws_inference_service.py
planning/: 00_mejoras.md
r-pi/: kws_monitor.py
scripts/: 00_create-record-word.py  01_train-kws-model.py  02_convert_to_tflite.py  create-record-word.py
