[project]
name = "jeepy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tflite-runtime>=2.14.0",
]
