[project]
name = "jeepy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.53.0",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "psutil>=7.1.3",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tflite-runtime>=2.14.0",
]
